EB-2009-02-03-0: Enhancent.: Added additional JSV test
                 Review:     MD

RH-2009-01-30-0: Bugfix:     Additional clusters did not work if user
                             has not expect in PATH
                 Review:     CR

RD-2009-01-29-0: Enhancem.:  new test for issue 2896
                 Review:     AA

TB-2009-01-29-0: Bugfix:     - get_binary_path no longer logs ts_config
                               messages when a binary cannot be found in the
                               host config. Instead ts_info message are logged,
                               which also lead (by default) to emails but no
                               longer flag the test as unsupported.
                             - fixed TCL error in checktree_hedeby/util.tcl
                 Review:     CR

RM-2009-01-28-0: Enhancem:   Test for hedeby issue 574
                 Review:     MG

CR-2009-01-28-0: Bugfix:     - removed TS menu item 29
                             - added error reporting to remote_file_mkdir()
                 Review:     DG

DG-2009-01-28-1: Cleanup:    DRMAA link redirection failed in rare cases.
                 Review:     CR

DG-2009-01-28-0: Cleanup:    Installed new Java DRMAA Junit 0.5 lib. 
                 Review:     SH

JG-2009-01-27-0: Enhancem.:  new test for issue 2329
                             cleanup
                 Review:     DG, RD

MG-2009-01-27-0: Enhancem:   Test for hedeby issue 570
                 Review:     RH

CR-2009-01-27-1: Enhancem.:  added verification code to install_core_system 
                             check that verifies the xterm binary path 
                             at execd host installation
                 Review:     RD

RD-2009-01-27-0: Bugfix:     fixed client_ar test
                 Review:     CR

CR-2009-01-27-0: Enhancem.:  Enhanced scheduler reconnect test to also test
                             event client timeout
                 Review:     RD
