@@ -1,3 +1,7 @@
+JG-2009-02-04-0: Bugfix:     Removed a wait_for_enter from scheduler_messages
+                             test + cleanup.
+                 Review:     RD
+
 EB-2009-02-03-0: Enhancent.: Added additional JSV test
                  Review:     MD
 
